--- a/accessories.html
+++ b/accessories.html
@@ -119,131 +119,131 @@
 		(function name(params) {
 			let listData = {
 				"Accessories": [{
-					"img": "./images/accessories/_1.jpg",
+					"img": "./images/accessories/1.jpg",
 					"title": "Slides",
 					"introduce": ""
 				}, {
-					"img": "./images/accessories/_2.jpg",
+					"img": "./images/accessories/2.jpg",
 					"title": "Slides"
 				}, {
-					"img": "./images/accessories/_3.jpg",
+					"img": "./images/accessories/3.jpg",
 					"title": "Slippers"
 				}, {
-					"img": "./images/accessories/_4.jpg",
+					"img": "./images/accessories/4.jpg",
 					"title": "Jacquard Socks"
 				}, {
-					"img": "./images/accessories/_5.jpg",
+					"img": "./images/accessories/5.jpg",
 					"title": "Jacquard Socks"
 				}, {
-					"img": "./images/accessories/_6.jpg",
+					"img": "./images/accessories/6.jpg",
 					"title": "Embroidery socks"
 				}, {
-					"img": "./images/accessories/_7.jpg",
+					"img": "./images/accessories/7.jpg",
 					"title": "Scarf"
 				}, {
-					"img": "./images/accessories/_8.jpg",
+					"img": "./images/accessories/8.jpg",
 					"title": "Backpack"
 				}, {
-					"img": "./images/accessories/_9.jpg",
+					"img": "./images/accessories/9.jpg",
 					"title": "Shoulder bags"
 				}, {
-					"img": "./images/accessories/_10.jpg",
+					"img": "./images/accessories/10.jpg",
 					"title": "Fanny packs"
 				}, {
-					"img": "./images/accessories/_11.jpg",
+					"img": "./images/accessories/11.jpg",
 					"title": "Tote"
 				}, {
-					"img": "./images/accessories/_12.jpg",
+					"img": "./images/accessories/12.jpg",
 					"title": "Drawstring bag"
 				}, {
-					"img": "./images/accessories/_13.jpg",
+					"img": "./images/accessories/13.jpg",
 					"title": "Makeup bag"
 				}, {
-					"img": "./images/accessories/_14.jpg",
+					"img": "./images/accessories/14.jpg",
 					"title": "Mug"
 				}, {
-					"img": "./images/accessories/_15.jpg",
+					"img": "./images/accessories/15.jpg",
 					"title": "Thermos Cup"
 				}, {
-					"img": "./images/accessories/_16.jpg",
+					"img": "./images/accessories/16.jpg",
 					"title": "Embroidery patches"
 				}, {
-					"img": "./images/accessories/_17.jpg",
+					"img": "./images/accessories/17.jpg",
 					"title": "Woven patches"
 				}, {
-					"img": "./images/accessories/_18.jpg",
+					"img": "./images/accessories/18.jpg",
 					"title": "Woven patches"
 				}, {
-					"img": "./images/accessories/_19.jpg",
+					"img": "./images/accessories/19.jpg",
 					"title": "Printed patches"
 				}, {
-					"img": "./images/accessories/_20.jpg",
+					"img": "./images/accessories/20.jpg",
 					"title": "Leather patches"
 				}, {
-					"img": "./images/accessories/_21.jpg",
+					"img": "./images/accessories/21.jpg",
 					"title": "PVC patches"
 				}, {
-					"img": "./images/accessories/_22.jpg",
+					"img": "./images/accessories/22.jpg",
 					"title": "Soft enamel pins"
 				}, {
-					"img": "./images/accessories/_23.jpg",
+					"img": "./images/accessories/23.jpg",
 					"title": "Hard enamel pins"
 				}, {
-					"img": "./images/accessories/_24.jpg",
+					"img": "./images/accessories/24.jpg",
 					"title": "Chenille patches"
 				}, {
-					"img": "./images/accessories/_25.jpg",
+					"img": "./images/accessories/25.jpg",
 					"title": "Metal keychains"
 				}, {
-					"img": "./images/accessories/_26.jpg",
+					"img": "./images/accessories/26.jpg",
 					"title": "PVC keychain"
 				}, {
-					"img": "./images/accessories/_27.jpg",
+					"img": "./images/accessories/27.jpg",
 					"title": "Acrylic keychain"
 				}, {
-					"img": "./images/accessories/_28.jpg",
+					"img": "./images/accessories/28.jpg",
 					"title": "Embroidery keychains"
 				}, {
-					"img": "./images/accessories/_29.jpg",
+					"img": "./images/accessories/29.jpg",
 					"title": "Woven keychain"
 				}, {
-					"img": "./images/accessories/_30.jpg",
+					"img": "./images/accessories/30.jpg",
 					"title": "Leather keychain"
 				}, {
-					"img": "./images/accessories/_31.jpg",
+					"img": "./images/accessories/31.jpg",
 					"title": "Stickers"
 				}, {
-					"img": "./images/accessories/_32.jpg",
+					"img": "./images/accessories/32.jpg",
 					"title": "Stickers"
 				}, {
-					"img": "./images/accessories/_33.jpg",
+					"img": "./images/accessories/33.jpg",
 					"title": "Stickers"
 				}, {
-					"img": "./images/accessories/_34.jpg",
+					"img": "./images/accessories/34.jpg",
 					"title": "Poster flag"
 				}, {
-					"img": "./images/accessories/_35.jpg",
+					"img": "./images/accessories/35.jpg",
 					"title": "Poster flag"
 				}, {
-					"img": "./images/accessories/_36.jpg",
+					"img": "./images/accessories/36.jpg",
 					"title": "Landyard"
 				}, {
-					"img": "./images/accessories/_37.jpg",
+					"img": "./images/accessories/37.jpg",
 					"title": "Wristband"
 				}, {
-					"img": "./images/accessories/_38.jpg",
+					"img": "./images/accessories/38.jpg",
 					"title": "Wristbands"
 				}, {
-					"img": "./images/accessories/_39.jpg",
+					"img": "./images/accessories/39.jpg",
 					"title": "Bracelets"
 				}, {
-					"img": "./images/accessories/_40.jpg",
+					"img": "./images/accessories/40.jpg",
 					"title": "Folding fan"
 				}, {
-					"img": "./images/accessories/_41.jpg",
+					"img": "./images/accessories/41.jpg",
 					"title": "Beach towel"
 				}, {
-					"img": "./images/accessories/_42.jpg",
+					"img": "./images/accessories/42.jpg",
 					"title": "Playing Cards"
 				}]
 			};
