--- a/apparel.html
+++ b/apparel.html
@@ -121,86 +121,86 @@
 		(function name(params) {
 			let listData = {
 				"Apparel": [{
-					"img": "./images/apparel/_1.jpg",
+					"img": "./images/apparel/1.jpg",
 					"title": "T-shirt",
 					"introduce": ""
 				}, {
-					"img": "./images/apparel/_2.jpg",
+					"img": "./images/apparel/2.jpg",
 					"title": "T-shirt"
 				}, {
-					"img": "./images/apparel/_3.jpg",
+					"img": "./images/apparel/3.jpg",
 					"title": "Polo Shirt"
 				}, {
-					"img": "./images/apparel/_4.jpg",
+					"img": "./images/apparel/4.jpg",
 					"title": "Tank"
 				}, {
-					"img": "./images/apparel/_5.jpg",
+					"img": "./images/apparel/5.jpg",
 					"title": "Jersey"
 				}, {
-					"img": "./images/apparel/_6.jpg",
+					"img": "./images/apparel/6.jpg",
 					"title": "Long Shirt"
 				}, {
-					"img": "./images/apparel/_7.jpg",
+					"img": "./images/apparel/7.jpg",
 					"title": "Sweatshirt"
 				}, {
-					"img": "./images/apparel/_8.jpg",
+					"img": "./images/apparel/8.jpg",
 					"title": "Sweatshirt"
 				}, {
-					"img": "./images/apparel/_9.jpg",
+					"img": "./images/apparel/9.jpg",
 					"title": "Hoodie"
 				}, {
-					"img": "./images/apparel/_10.jpg",
+					"img": "./images/apparel/10.jpg",
 					"title": "Hoodie"
 				}, {
-					"img": "./images/apparel/_11.jpg",
+					"img": "./images/apparel/11.jpg",
 					"title": "Zipper hoodie"
 				}, {
-					"img": "./images/apparel/_12.jpg",
+					"img": "./images/apparel/12.jpg",
 					"title": "Windbreaker"
 				}, {
-					"img": "./images/apparel/_13.jpg",
+					"img": "./images/apparel/13.jpg",
 					"title": "Jacket"
 				}, {
-					"img": "./images/apparel/_14.jpg",
+					"img": "./images/apparel/14.jpg",
 					"title": "Bomber jacket"
 				}, {
-					"img": "./images/apparel/_15.jpg",
+					"img": "./images/apparel/15.jpg",
 					"title": "Denim Jacket"
 				}, {
-					"img": "./images/apparel/_16.jpg",
+					"img": "./images/apparel/16.jpg",
 					"title": "Christmas Sweater"
 				}, {
-					"img": "./images/apparel/_17.jpg",
+					"img": "./images/apparel/17.jpg",
 					"title": "Christmas Sweater"
 				}, {
-					"img": "./images/apparel/_18.jpg",
+					"img": "./images/apparel/18.jpg",
 					"title": "Sweater"
 				}, {
-					"img": "./images/apparel/_19.jpg",
+					"img": "./images/apparel/19.jpg",
 					"title": "Swimwear"
 				}, {
-					"img": "./images/apparel/_20.jpg",
+					"img": "./images/apparel/20.jpg",
 					"title": "Swimwear set"
 				}, {
-					"img": "./images/apparel/_21.jpg",
+					"img": "./images/apparel/21.jpg",
 					"title": "Bikini"
 				}, {
-					"img": "./images/apparel/_22.jpg",
+					"img": "./images/apparel/22.jpg",
 					"title": "Short"
 				}, {
-					"img": "./images/apparel/_23.jpg",
+					"img": "./images/apparel/23.jpg",
 					"title": "Short"
 				}, {
-					"img": "./images/apparel/_24.jpg",
+					"img": "./images/apparel/24.jpg",
 					"title": "Jogger"
 				}, {
-					"img": "./images/apparel/_25.jpg",
+					"img": "./images/apparel/25.jpg",
 					"title": "Legging"
 				}, {
-					"img": "./images/apparel/_26.jpg",
+					"img": "./images/apparel/26.jpg",
 					"title": "Legging"
 				}, {
-					"img": "./images/apparel/_27.jpg",
+					"img": "./images/apparel/27.jpg",
 					"title": "Legging"
 				}]
 			};
