--- a/headwear.html
+++ b/headwear.html
@@ -117,86 +117,86 @@
 		(function name(params) {
 			let listData = {
 				"Headwear": [{
-					"img": "./images/headwear/_1.jpg",
+					"img": "./images/headwear/1.jpg",
 					"title": "Snapback Hat",
 					"introduce": ""
 				}, {
-					"img": "./images/headwear/_2.jpg",
+					"img": "./images/headwear/2.jpg",
 					"title": "Snapback Hat"
 				}, {
-					"img": "./images/headwear/_3.jpg",
+					"img": "./images/headwear/3.jpg",
 					"title": "Snapback Hat"
 				}, {
-					"img": "./images/headwear/_4.jpg",
+					"img": "./images/headwear/4.jpg",
 					"title": "5 Panel Hat"
 				}, {
-					"img": "./images/headwear/_5.jpg",
+					"img": "./images/headwear/5.jpg",
 					"title": "Camper Hat"
 				}, {
-					"img": "./images/headwear/_6.jpg",
+					"img": "./images/headwear/6.jpg",
 					"title": "Trucker Hat"
 				}, {
-					"img": "./images/headwear/_7.jpg",
+					"img": "./images/headwear/7.jpg",
 					"title": "Baseball Hat"
 				}, {
-					"img": "./images/headwear/_8.jpg",
+					"img": "./images/headwear/8.jpg",
 					"title": "Baseball Hat"
 				}, {
-					"img": "./images/headwear/_9.jpg",
+					"img": "./images/headwear/9.jpg",
 					"title": "Dad Hat"
 				}, {
-					"img": "./images/headwear/_10.jpg",
+					"img": "./images/headwear/10.jpg",
 					"title": "Dad Hats"
 				}, {
-					"img": "./images/headwear/_11.jpg",
+					"img": "./images/headwear/11.jpg",
 					"title": "Trucker Hats"
 				}, {
-					"img": "./images/headwear/_12.jpg",
+					"img": "./images/headwear/12.jpg",
 					"title": "Trucker Hat"
 				}, {
-					"img": "./images/headwear/_13.jpg",
+					"img": "./images/headwear/13.jpg",
 					"title": "Visor Hat"
 				}, {
-					"img": "./images/headwear/_14.jpg",
+					"img": "./images/headwear/14.jpg",
 					"title": "Bucket Hat"
 				}, {
-					"img": "./images/headwear/_15.jpg",
+					"img": "./images/headwear/15.jpg",
 					"title": "Bucket Hat"
 				}, {
-					"img": "./images/headwear/_16.jpg",
+					"img": "./images/headwear/16.jpg",
 					"title": "Beret"
 				}, {
-					"img": "./images/headwear/_17.jpg",
+					"img": "./images/headwear/17.jpg",
 					"title": "PomPom Beanie"
 				}, {
-					"img": "./images/headwear/_18.jpg",
+					"img": "./images/headwear/18.jpg",
 					"title": "PomPom Beanie"
 				}, {
-					"img": "./images/headwear/_19.jpg",
+					"img": "./images/headwear/19.jpg",
 					"title": "Beanie"
 				}, {
-					"img": "./images/headwear/_20.jpg",
+					"img": "./images/headwear/20.jpg",
 					"title": "Beanies"
 				}, {
-					"img": "./images/headwear/_21.jpg",
+					"img": "./images/headwear/21.jpg",
 					"title": "Beanies"
 				}, {
-					"img": "./images/headwear/_22.jpg",
+					"img": "./images/headwear/22.jpg",
 					"title": "Short Beanies"
 				}, {
-					"img": "./images/headwear/_23.jpg",
+					"img": "./images/headwear/23.jpg",
 					"title": "Balaclava"
 				}, {
-					"img": "./images/headwear/_24.jpg",
+					"img": "./images/headwear/24.jpg",
 					"title": "Neck Gaiter"
 				}, {
-					"img": "./images/headwear/_25.jpg",
+					"img": "./images/headwear/25.jpg",
 					"title": "Bandana"
 				}, {
-					"img": "./images/headwear/_26.jpg",
+					"img": "./images/headwear/26.jpg",
 					"title": "Bandana"
 				}, {
-					"img": "./images/headwear/_27.jpg",
+					"img": "./images/headwear/27.jpg",
 					"title": "Straw hat"
 				}]
 			};
