--- a/home.html
+++ b/home.html
@@ -64,17 +64,17 @@
 				</header>
 				<ul class="features">
 					<li>
-						<div><img style="width: 80%;" src="images/apparel/_1.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="images/apparel/1.jpg" alt=""></div>
 						<h3>T-shirt</h3>
 						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
 					</li>
 					<li>
-						<div><img style="width: 80%;" src="images/apparel/_9.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="images/apparel/9.jpg" alt=""></div>
 						<h3>Hoodie</h3>
 						<!-- <p>introduce introduce introduce .</p> -->
 					</li>
 					<li>
-						<div><img style="width: 80%;" src="images/apparel/_14.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="images/apparel/14.jpg" alt=""></div>
 						<h3>Bomber jacket</h3>
 						<!-- <p>introduce introduce introduce .</p> -->
 					</li>
@@ -95,17 +95,17 @@
 				</header>
 				<ul class="features">
 					<li>
-						<div><img style="width: 80%;" src="./images/headwear/_1.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/headwear/1.jpg" alt=""></div>
 						<h3>Snapback</h3>
 						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
 					</li>
 					<li>
-						<div><img style="width: 80%;" src="./images/headwear/_10.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/headwear/10.jpg" alt=""></div>
 						<h3>Dad hats</h3>
 						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
 					</li>
 					<li>
-						<div><img style="width: 80%;" src="./images/headwear/_17.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/headwear/17.jpg" alt=""></div>
 						<h3>POMPOM Beanie</h3>
 						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
 					</li>
@@ -126,15 +126,15 @@
 				</header>
 				<ul class="statistics">
 					<li class="style1">
-						<div><img style="width: 80%;" src="./images/accessories/_4.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/accessories/4.jpg" alt=""></div>
 						<h3>Socks</h3>
 					</li>
 					<li class="style2">
-						<div><img style="width: 80%;" src="./images/accessories/_9.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/accessories/9.jpg" alt=""></div>
 						<h3>Shoulder bags</h3>
 					</li>
 					<li class="style3">
-						<div><img style="width: 80%;" src="./images/accessories/_21.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/accessories/21.jpg" alt=""></div>
 						<h3>PVC patches</h3>
 					</li>
 					<!-- <li class="style1">
