--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 				<li><a href="#apparel">APPAREL</a></li>
 				<li><a href="#headwear">HEADWEAR</a></li>
 				<li><a href="#accessories">ACCESSORIES</a></li>
-				<li><a href="techniques.html">TECHNIQUES</a></li>
+				<li><a href="#techniques">TECHNIQUES</a></li>
 			</ul>
 		</nav>
 
@@ -152,9 +152,9 @@
 
 			
 			<!-- Other Section -->
-			<section id="other" class="main special">
+			<section id="techniques" class="main special">
 				<header class="major">
-					<h2>Other</h2>
+					<h2>Techniques</h2>
 					<p>We use the latest techniques to create our products.</p>
 				</header>
 				<footer class="major">
