--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<li><a href="#apparel">APPAREL</a></li>
 				<li><a href="#headwear">HEADWEAR</a></li>
 				<li><a href="#accessories">ACCESSORIES</a></li>
-				<li><a href="techniques.html">TECHNIQUES</a></li>
+				<li><a href="#techniques">TECHNIQUES</a></li>
 			</ul>
 		</nav>
 
@@ -64,17 +64,17 @@
 				</header>
 				<ul class="features">
 					<li>
-						<div><img style="width: 80%;" src="images/apparel/1-t-shirt-1.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="images/apparel/1.jpg" alt=""></div>
 						<h3>T-shirt</h3>
 						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
 					</li>
 					<li>
-						<div><img style="width: 80%;" src="images/apparel/2-hoodie-03-1.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="images/apparel/9.jpg" alt=""></div>
 						<h3>Hoodie</h3>
 						<!-- <p>introduce introduce introduce .</p> -->
 					</li>
 					<li>
-						<div><img style="width: 80%;" src="images/apparel/3-bomber-jacket-2.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="images/apparel/14.jpg" alt=""></div>
 						<h3>Bomber jacket</h3>
 						<!-- <p>introduce introduce introduce .</p> -->
 					</li>
@@ -95,17 +95,17 @@
 				</header>
 				<ul class="features">
 					<li>
-						<div><img style="width: 80%;" src="./images/headwear/1-snapback-3.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/headwear/1.jpg" alt=""></div>
 						<h3>Snapback</h3>
 						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
 					</li>
 					<li>
-						<div><img style="width: 80%;" src="./images/headwear/2-dad-hat-2.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/headwear/10.jpg" alt=""></div>
 						<h3>Dad hats</h3>
 						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
 					</li>
 					<li>
-						<div><img style="width: 80%;" src="./images/headwear/4-pompom-beanie-1.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/headwear/17.jpg" alt=""></div>
 						<h3>POMPOM Beanie</h3>
 						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
 					</li>
@@ -126,15 +126,15 @@
 				</header>
 				<ul class="statistics">
 					<li class="style1">
-						<div><img style="width: 80%;" src="./images/accessories/1-socks.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/accessories/4.jpg" alt=""></div>
 						<h3>Socks</h3>
 					</li>
 					<li class="style2">
-						<div><img style="width: 80%;" src="./images/accessories/2-shoulder-bags.png" alt=""></div>
+						<div><img style="width: 80%;" src="./images/accessories/9.jpg" alt=""></div>
 						<h3>Shoulder bags</h3>
 					</li>
 					<li class="style3">
-						<div><img style="width: 80%;" src="./images/accessories/4-PVC-patches.jpg" alt=""></div>
+						<div><img style="width: 80%;" src="./images/accessories/21.jpg" alt=""></div>
 						<h3>PVC patches</h3>
 					</li>
 					<!-- <li class="style1">
@@ -152,9 +152,9 @@
 
 			
 			<!-- Other Section -->
-			<section id="other" class="main special">
+			<section id="techniques" class="main special">
 				<header class="major">
-					<h2>Other</h2>
+					<h2>Techniques</h2>
 					<p>We use the latest techniques to create our products.</p>
 				</header>
 				<footer class="major">
@@ -196,7 +196,7 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; 2023, Joyful Merch Limited.</p>
+			<p class="copyright">&copy; 2025, Joyful Merch Limited.</p>
 			<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 		</footer>
 
